@@ -269,8 +269,8 @@ let test_entry (tchk : typechecker) sd ((s1, (res, flags)) : entry) =
             | parsed.Decl d ->
                 tchk.W_decl d
                 match d.value with
-                | D_RecBind [{ patt = ULo (P_Var x) }]
-                | D_Bind [{ patt = ULo (P_Var x) | ULo (P_Annot (ULo (P_Var x), _)) }] ->
+                | D_RecBind [{ patt = ULo (P_SimpleVar (x, _)) }]
+                | D_Bind [{ patt = ULo (P_SimpleVar (x, _)) }] ->
                     let envs0 = tchk.envs
                     let r = tchk.lookup_var_Γ x
                     if ed.is_enabled flag.RemoveBindings then tchk.envs <- envs0
